[package]
authors = ["The gtk-rs Project Developers"]
description = "FFI bindings of GTK 4"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gtk4_sys"
edition = "2021"
homepage = "https://gtk-rs.org/"
keywords = ["gtk", "gtk4", "ffi", "gtk-rs", "gnome"]
license = "MIT"
name = "gtk4-sys"
repository = "https://github.com/gtk-rs/gtk4-rs"
version = "0.7.3"
rust-version = "1.70"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lib]
name = "gtk4_sys"

[features]
v4_2 = []
v4_4 = ["v4_2"]
v4_6 = ["v4_4"]
v4_8 = ["v4_6"]
v4_10 = ["v4_8"]
v4_12 = ["v4_10"]
v4_14 = ["v4_12"]

[dependencies]
libc = "0.2"

[dependencies.cairo]
package = "cairo-sys-rs"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"
branch = "0.18"

[dependencies.gdk_pixbuf]
package = "gdk-pixbuf-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"
branch = "0.18"

[dependencies.gdk]
package = "gdk4-sys"
path = "../../gdk4/sys"
version = "0.7"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"
branch = "0.18"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"
branch = "0.18"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"
branch = "0.18"

[dependencies.graphene]
package = "graphene-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"
branch = "0.18"

[dependencies.gsk]
package = "gsk4-sys"
path = "../../gsk4/sys"
version = "0.7"

[dependencies.pango]
package = "pango-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"
branch = "0.18"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
